[package]
authors = ["sjm"]
edition = "2021"
readme = "README.md"
name = "maxx_io"
version = "0.2.0"
resolver = "2"


[dependencies]

cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2", features = ["unproven"] }
embedded-time = "0.12"
fugit = "0.3"
futures = { version = "0.3", default-features = false, optional = true }
panic-halt = "0.2"
# panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.6"
rp2040-boot2 = { version = "0.2" }
# rp2040-hal = { version = "0.7", features = ["rt", "eh1_0_alpha "] }
# rp2040-hal = { git = "https://github.com/rp-rs/rp-hal.git", features = ["rt","eh1_0_alpha "] }
# rp2040-hal = { path = "../../00test/rp-hal", features = ["rt", "eh1_0_alpha "] }
systick-monotonic = "1.0"
usb-device = "0.2"
usbd-serial = "0.1"
usbd-hid = "0.6"

shared-bus = { version = "0.2", features = ["cortex-m"] }
# shared-bus = { git = "https://github.com/Rahix/shared-bus.git", features = ["cortex-m", "eh-alpha"] }

port-expander-multi = { git = "https://github.com/sjm42/port-expander-multi.git" }
# port-expander-multi = { path = "../../00test/port-expander-multi" }


[dev-dependencies]
# embedded-hal ="0.2.5"
# cortex-m-rtic = "0.6.0-rc.4"
# nb = "1.0"
# heapless = "0.7.9"
# jnc commented for test pico-probe 
# defmt = "0.3.0"
# defmt-rtt = "0.3.0"
# static-box = "0.2.0"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[[bin]]
name = "main"
test = false
bench = false

# EOF
